src/main/java/com/example/login_jwt/global/error/exception/AuthGroupException.java
package com.example.login_jwt.global.error.exception;

public abstract class AuthGroupException extends RuntimeException{
    public AuthGroupException(String message) {
        super(message);
    }
}
